--- a/src/main/webapp/pages/styles/offcanvas.css
+++ b/src/main/webapp/pages/styles/offcanvas.css
@@ -17,6 +17,10 @@ footer {
   background-position: top;
   margin: 0;
 }
+#navBarhead1{
+  background-position: top;
+  margin: 0;
+}
 #carousel{
   margin-top: 0;
   margin-bottom: 0;
